# primit

./: .gitignore  Cargo.toml  LICENSE  README.md  tst.txt
benches/: bench_aes.rs  bench_aesgcm.rs  bench_chacha20.rs  bench_chacha20poly1305.rs  bench_ghash.rs  bench_hex.rs  bench_hmac.rs  bench_md5.rs  bench_p256.rs  bench_poly1305.rs  bench_rng.rs  bench_sha256.rs
src/: error.rs  lib.rs  main.rs
src/aead/: aesgcm.rs  chacha20poly1305.rs  mod.rs
src/cipher/: aes.rs  chacha.rs  chacha20.rs  mod.rs
src/ec/: mod.rs
src/ec/p256/: int256.rs  mod.rs  point256.rs
src/hash/: md5.rs  mod.rs  sha256.rs
src/mac/: ghash.rs  ghash_old.rs  hmac.rs  mod.rs  poly1305.rs
src/mac/ghash/: clmul.rs  mod.rs  soft.rs
src/rng/: aes.rs  chacha8.rs  cprng.rs  mod.rs
src/symmetry/: chacha.rs
src/symmetry/aes/: aesni.rs  mod.rs  soft.rs
src/util/: hex.rs
src/utils/: endian.rs  hex.rs  mod.rs  xor.rs
tests/: test_aes.rs  test_aesgcm.rs  test_chacha20.rs  test_chacha20poly1305.rs  test_ghash.rs  test_hex.rs  test_md5.rs  test_p256.rs  test_poly1305.rs  test_sha256.rs
