[package]
name = "primit"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom = { version = "0.2", optional = true }

[features]
default = ["system-random"]
system-random = ["getrandom"]

[dev-dependencies]
sha2 = "*"
md-5 = "*"
chacha20 = "*"
aes = "*"
p256 = "*"

[profile.release]
codegen-units = 1
debug = true
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
