[package]
name = "primit"
version = "0.0.1"
edition = "2021"

[dependencies]
getrandom = { version = "0.2", optional = true }

[features]
default = ["system-random", "aesni"]
system-random = ["getrandom"]
aesni = []

[dev-dependencies]
sha2 = "*"
md-5 = "*"
chacha20 = "*"
poly1305 = "*"
aes = "*"
p256 = "*"
aes-gcm = "*"


[profile.release]
codegen-units = 1
debug = true
incremental = false
lto = "fat"
opt-level = "s"
panic = "abort"
