[package]
name = "primit"
version = "0.0.1"
edition = "2021"

[dependencies]
getrandom = { version = "0.2", optional = true }

[features]
default = ["system-random", "aesni"]
system-random = ["getrandom"]
aesni = []

[dev-dependencies]
sha2 = "*"
md-5 = "*"
chacha20 = "*"
poly1305 = "*"
aes = "*"
p256 = "*"
aes-gcm = "*"
chacha20poly1305 = "*"
